// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should handle click 1`] = `
<scale-button icon-position="before">
  <template shadowrootmode="open">
    <button class="button button--icon-before button--size-large button--variant-primary" part="base variant-primary before">
      <slot></slot>
    </button>
  </template>
  Label
</scale-button>
`;

exports[`Button should handle click 2`] = `
<scale-button icon-position="before">
  <template shadowrootmode="open">
    <button class="button button--icon-before button--size-large button--variant-primary" part="base variant-primary before">
      <slot></slot>
    </button>
  </template>
  Label
</scale-button>
`;

exports[`Button should handle icon after 1`] = `
<scale-button icon-position="after">
  <template shadowrootmode="open">
    <button class="button button--icon-after button--size-large button--variant-primary" part="base variant-primary after">
      <slot></slot>
    </button>
  </template>
  Label
  <scale-icon-action-search></scale-icon-action-search>
</scale-button>
`;

exports[`Button should handle icon before 1`] = `
<scale-button icon-position="before">
  <template shadowrootmode="open">
    <button class="button button--icon-before button--size-large button--variant-primary" part="base variant-primary before">
      <slot></slot>
    </button>
  </template>
  <scale-icon-action-search></scale-icon-action-search>
  Label
</scale-button>
`;

exports[`Button should match snapshot 1`] = `
<scale-button icon-position="before">
  <template shadowrootmode="open">
    <button class="button button--icon-before button--size-large button--variant-primary" part="base variant-primary before">
      <slot></slot>
    </button>
  </template>
  Label
</scale-button>
`;
